p2/confs/app-three.yml
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app-three
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  labels:
    app: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: iot-web-app
          image: tgrivel/simple-web-app:1.0
          ports:
            - containerPort: 8080
